--- a/src/style.css
+++ b/src/style.css
@@ -43,12 +43,12 @@ form {
   display: flex;
   flex-direction: column;
     margin: 0 auto;
-    margin-top:200px;
+    margin-top:20px;
 }
 
 .formInput {
   width: 100%;
-  padding: 10px 20px;
+  padding: 5px 20px;
   border-radius: 20px;
   border: 1px solid black;
   text-align: center;
@@ -177,7 +177,7 @@ form {
 }
 
 .nweet {
-  margin-bottom: 60px;
+  margin-bottom: 100px;
   background-color: white;
   width: 100%;
   max-width: 320px;
@@ -187,6 +187,7 @@ form {
   display: flex;
   flex-direction: column;
   color: rgba(0, 0, 0, 0.8);
+  height:220px;
 }
 
 .nweet h4 {
@@ -333,11 +334,6 @@ form {
   margin:0 15px;
 }
 
-.reply_btns_container > button{
-  margin: 0 5px;
-  cursor:pointer;
-}
-
 .deletedText{
   color:red;
   text-decoration:line-through;
@@ -354,19 +350,19 @@ form {
   margin: 5px 10px;
 }
 
-.retwit_text_container{
+.retweet_text_container{
   height:100%;
   display:flex;
   justify-content: center;
 }
 
-.close_retwit_container{
+.close_retweet_container{
   display:flex;
   justify-content:flex-end;
   padding:10px;
 }
 
-.retwit_container{
+.retweet_content_container{
   border:1px solid white;
   height:100px;
   margin:10px 0 30px 0;
@@ -375,11 +371,11 @@ form {
   flex-direction: column;
 }
 
-.close_retwit_btn{
+.close_retweet_btn{
   cursor:pointer;
 }
 
-.retwit_header{
+.retweet_header{
   text-align:center;
   font-weight:bold;
   font-size:32px;
@@ -428,4 +424,70 @@ form {
 
 .file_upload_input{
   opacity: 0;
+}
+
+.action_container{
+  display:flex;
+  justify-content:space-around;
+  align-items:flex-end;
+  margin-top:15px;
+}
+
+.action_container > div{
+  display:flex;
+  align-items: center;
+}
+
+.action_container .icons{
+  width:22px;
+  height:22px;
+}
+
+.action_container span{
+  margin-left:10px;
+  font-weight:bold;
+}
+
+.tweet_text{
+  margin-top: 32px;
+  height:100%;
+}
+
+.hearted{
+  color:red;
+}
+
+.child_icon{
+  color:white;
+  position: absolute;
+  left:-70px;
+  width:30px;
+  height:30px;
+}
+
+.action_share_container{
+  display:flex;
+  flex-direction: column;
+}
+
+.share_icon_container{
+  display:flex;
+  flex-direction: column;
+}
+
+.retweet_container{
+  display:flex;
+  align-items:flex-end;
+  height:200px;
+}
+
+.share_items > li{
+  margin-top:5px;
+}
+
+.write_date {
+  display:flex;
+  align-items:flex-end;
+  font-weight:bold;
+  color:gray;
 }
