--- a/src/style.css
+++ b/src/style.css
@@ -1,497 +1,392 @@
-@import "https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css";
-
-* {
-  box-sizing: border-box;
+html {
+  box-sizing:border-box;
 }
 
-input {
-  all: unset;
-  box-sizing: border-box;
-  appearance: none;
+body{
+  background-color:black;
+  margin : 0;
+  padding : 0;
+  color:white;
+  box-sizing:border-box;
+}
+img{
+  width:25px;
+  height:25px;
 }
 
-body {
-  background-color: black;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 14px;
-  color: white;
-}
-
-button {
-  background-color: white;
-  color: black;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-form {
-  width: 100%;
-}
-
-.nweet-input::placeholder {
-  color: white;
-  opacity: 0.9;
-}
-
-.container {
-  width: 100%;
-  max-width: 320px;
+.App{
   display: flex;
-  flex-direction: column;
-    margin: 0 auto;
-    margin-top:20px;
-}
-
-.formInput {
-  width: 100%;
-  padding: 5px 20px;
-  border-radius: 20px;
-  border: 1px solid black;
-  text-align: center;
-  background-color: white;
-  color: black;
-}
-
-.formBtn {
-  cursor: pointer;
-  width: 100%;
-  padding: 7px 20px;
-  text-align: center;
-  color: white;
-  border-radius: 20px;
-  background-color: #04aaff;
-  cursor: pointer;
-}
-
-.cancelBtn {
-  cursor: pointer;
-  background-color: tomato;
-}
-
-/* Profile Page */
-
-.profileForm {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.9);
-  padding-bottom: 30px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.profileForm > button{
-  margin-top: 10px;
-}
-
-.logOut {
-  margin-top: 50px;
-}
-
-/* Nwitter Factory */
-
-.factoryForm {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-}
-
-.factoryInput__container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  position: relative;
-  margin-bottom: 20px;
-  width: 100%;
-}
-
-.factoryInput__input {
-  flex-grow: 1;
-  height: 40px;
-  padding: 0px 20px;
-  color: white;
-  border: 1px solid #04aaff;
-  border-radius: 20px;
-  font-weight: 500;
-  font-size: 12px;
-}
-
-.factoryInput__arrow {
-  position: absolute;
-  right: 0;
-  background-color: #04aaff;
-  height: 40px;
-  width: 40px;
-  padding: 10px 0px;
-  text-align: center;
-  border-radius: 20px;
-  color: white;
-}
-
-.factoryInput__label {
-  color: #04aaff;
-  cursor: pointer;
-}
-
-.factoryInput__label span {
-  margin-right: 10px;
-  font-size: 12px;
-}
-
-.factoryForm__attachment {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.factoryForm__attachment img {
-  height: 80px;
-  width: 80px;
-  border-radius: 40px;
-  top: 49px;
-  right: 40px;
-}
-
-.factoryForm__clear {
-  color: #04aaff;
-  cursor: pointer;
-  text-align: center;
-  margin: 10px;
-}
-
-.factoryForm__clear span {
-  margin-right: 10px;
-  font-size: 12px;
-}
-
-/* Nweet */
-
-.nweetEdit .formBtn {
-  cursor: pointer;
-  margin-top: 15px;
-  margin-bottom: 5px;
-}
-
-.nweet {
-  margin-bottom: 100px;
-  background-color: white;
-  width: 100%;
-  max-width: 320px;
-  padding: 20px;
-  border-radius: 10px;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  color: rgba(0, 0, 0, 0.8);
-  height:220px;
-}
-
-.nweet h4 {
-  font-size: 14px;
-}
-
-.nweet img {
-  right: -10px;
-  top: 20px;
-  position: absolute;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  margin-top: 10px;
-}
-
-.nweet__actions {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-}
-
-.nweet__actions span {
-  cursor: pointer;
-}
-
-.nweet__actions span:first-child {
-  margin-right: 10px;
-}
-
-/* Auth */
-
-.authContainer {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
-}
-
-.authContainer > .twitter_icon{
-  margin-bottom: 30px;
-}
-
-.authBtns {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  max-width: 320px;
-}
-
-.authBtn {
-  cursor: pointer;
-  border-radius: 20px;
-  border: none;
-  padding: 10px 0px;
-  font-size: 12px;
-  text-align: center;
-  width: 150px;
-  background: white;
-  cursor: pointer;
-}
-
-/* AuthForm */
-
-.authInput {
-  max-width: 320px;
-  width: 100%;
-  padding: 10px;
-  border-radius: 30px;
-  background-color: rgba(255, 255, 255, 1);
-  margin-bottom: 10px;
-  font-size: 12px;
-  color: black;
-}
-
-.authSubmit {
-  text-align: center;
-  background: #04aaff;
-  color: white;
-  margin-top: 10px;
-  cursor: pointer;
-}
-
-.authError {
-  color: tomato;
-  text-align: center;
-  font-weight: 500;
-  font-size: 12px;
-}
-
-.authSwitch {
-  color: #04aaff;
-  cursor: pointer;
-  margin-top: 10px;
-  margin-bottom: 50px;
-  display: block;
-  font-size: 12px;
-  text-decoration: underline;
 }
 
 
-.loading_page{
-    position: absolute;
-    top:50%;
-    left:50%;
-    font-size:100px;
-    transform: translate(-50%, -50%);
+/* top bar css */
+
+.top_container{
+  position: fixed;
+  margin-left:calc(25% + 40px);
+  height:40px;
+  background-color: rgba(0,0,0,0.7);
+  width:65%;
+  border-left:0.1px solid gray;
+  border-right:0.1px solid gray;
 }
 
-.profile_image{
-  width:100px;
-  height:100px;
-  border:1px solid white;
-  margin : 0 auto;
-}
-
-.profile_image > img {
-  width:100px;
-  height:100px;
-}
-
-.upload_btn {
-  width:100px;
-  margin: 0 auto;
-  margin-bottom:50px;
-  cursor:pointer;
-}
-
-.reply_nweet{
-  margin-left:100px;
-}
-
-.reply_container{
-  margin-top:30px;
-}
-
-.reply_text{
-  border:1px solid black;
-}
-
-.like_count_number{
-  display:inline;
-  margin:0 15px;
-}
-
-.deletedText{
-  color:red;
-  text-decoration:line-through;
-}
-
-.share_container{
-  margin-top: 20px;
+.show_current_page{
+  height:40px;
   display:flex;
-  justify-content: flex-end;
   align-items:center;
 }
 
-.share_container > button {
-  margin: 5px 10px;
-}
-
-.retweet_text_container{
-  height:100%;
-  display:flex;
-  justify-content: center;
-}
-
-.close_retweet_container{
-  display:flex;
-  justify-content:flex-end;
-  padding:10px;
-}
-
-.retweet_content_container{
-  border:1px solid white;
-  height:100px;
-  margin:10px 0 30px 0;
+.show_current_page > span{
   font-weight:bold;
+  font-size:20px;
+  margin-left:10px;
+}
+
+.top_side_container{
+  position:fixed;
+  margin-left:calc(70% + 40px);
+  height:40px;
+  background-color: rgba(0,0,0,0.7);
+  border:0.1px solid gray;
+  width:20%;
   display:flex;
-  flex-direction: column;
+  align-items:center;
+  justify-content:center;
 }
 
-.close_retweet_btn{
-  cursor:pointer;
-}
-
-.retweet_header{
-  text-align:center;
-  font-weight:bold;
-  font-size:32px;
-}
+/* left navigation css */
 
 .nav_link_container{
-    display: flex;
-    justify-content: center;
-    margin-top: 50px;
+  list-style-type: none;
+  width:15%;
+  margin: 0;
+  margin-left:10%;
+  padding:0;
+  height: 100%;
+  position: fixed;
+  overflow: auto;
 }
 
-.nav_link_home{
-  margin-right: 10px;
+.nav_link_container > li > a:hover {
+  background-color:white;
 }
 
-.nav_link_profile{
-  margin-left:10px;
+.nav_link_container > li{
+  margin-bottom:15%;
   display:flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: 12px;
 }
 
-.nav_link_profile > span{
+.nav_link_container > li:hover{
+  cursor: pointer;
+}
+
+.nav_link_container > li:first-child{
   margin-top:10px;
+  margin-left:8px;
 }
 
-.nweet > .user_photo_image {
-  top: -42px;
-  left: 10px;
+.nav_link_container > li a{
+  padding:5px;
 }
 
-.user_photo_image{
-  width: 50px;
-  height: 50px;
-}
-
-.tictoc_container{
-  margin-top:30px;
-}
-
-.container > label {
-  margin-top:10px;
-  text-align:center;
-}
-
-.file_upload_input{
-  opacity: 0;
-}
-
-.action_container{
-  display:flex;
-  justify-content:space-around;
-  align-items:flex-end;
-  margin-top:15px;
-}
-
-.action_container > div{
-  display:flex;
-  align-items: center;
-}
-
-.action_container .icons{
-  width:22px;
-  height:22px;
-}
-
-.action_container span{
-  margin-left:10px;
-  font-weight:bold;
-}
-
-.tweet_text{
-  margin-top: 32px;
-  height:100%;
-}
-
-.hearted{
-  color:red;
-}
-
-.child_icon{
-  color:white;
-  position: absolute;
-  left:-70px;
+.nav_link_container > li svg{
   width:30px;
   height:30px;
 }
 
-.action_share_container{
-  display:flex;
-  flex-direction: column;
+.nav_link_container > li a:hover{ 
+  border-radius:20px;
+  background-color:slategray;
 }
 
-.share_icon_container{
-  display:flex;
-  flex-direction: column;
+.nav_link_container > li:not(:first-child){
+  margin: 10px 0;
 }
 
-.retweet_container{
+.nav_link_container > li > div > .nav_link{
   display:flex;
-  align-items:flex-end;
-  height:200px;
+  align-items: center;
+  text-decoration: none; 
 }
 
-.share_items > li{
-  margin-top:5px;
+.nav_link_container > li > div > .nav_link > span{
+  color:white;
+  margin-left:20px;
 }
 
-.write_date {
+.nav_link_container > li > .li_container{
+  padding:8px;
+}
+
+.nav_link_container > li > .li_container:hover{
+  background-color:slategray;
+  border-radius:25px;
+}
+
+.nav_link_container > li:nth-last-child(1) {
+  cursor:default;
+}
+
+.navi_tweet_container{
   display:flex;
-  align-items:flex-end;
+  justify-content: center;
+  align-items: center;
+}
+
+.navi_tweet_container:hover{
+  cursor:pointer;
+}
+
+.navi_tweet_container > .tweet_btn{
+  background-color:#04AAFF;
+  padding:15px;
+  width: 100%;
+  border-radius: 30px;
+  text-align:center;
+}
+
+.navi_tweet_container > .tweet_btn > span{
+  color:white;
+  font-size:15px;
+  font-weight: bold;
+}
+
+.current_user_info_container{
+  width:100%;
+  text-align: center;
+  position:absolute;
+  bottom:0;
+  margin-bottom:20px;
+  display:flex;
+}
+
+.current_user_info{
+  display:flex;
+  align-items:center;
+  margin-left:10%;
+  font-weight: bold;
+}
+
+
+/* content css */
+
+.container{
+  margin-left:calc(25% + 40px);
+  margin-top:40px;
+  padding: 0px;
+  border:0.5px solid lightslategray;
+  width:45%;
+}
+
+.factoryForm{
+  display:flex;
+  margin-top:20px;
+  margin-bottom:40px;
+}
+
+.content_container > .write_tweet_container{
+  padding:20px;
+  padding-bottom:0px;
+  border-bottom:0.1px solid gray;
+}
+.user_image_container {
+  margin-right:20px;
+}
+
+.factoryForm > .user_image_container > img{
+  width:50px;
+  height:50px;
+  border-radius:30px;
+}
+
+.factoryForm > .tweet_input_container{
+  width:100%;
+  margin-top:10px;
+}
+
+.factoryForm > .tweet_input_container > .factoryInput__input{
+  height:30px;
+  width:100%;
+  background-color:black;
+  color:white;
   font-weight:bold;
-  color:gray;
+  border:none;
+  font-size:20px;
 }
 
-.enroll_time{
-  margin-right:15px;
+.tweet_input_container > .tweet_footer{
+  border-top: 0.1px solid gray;
+  padding-top:20px;
+  margin-top:10px;
+  display:flex;
+  align-items: center;
+  position: relative;
 }
+
+.tweet_input_container > .tweet_footer > .factoryInput__label > .input_image_icon{
+  width:20px;
+  height:20px;
+}
+
+.tweet_input_container > .tweet_footer > .file_upload_input{
+  display:none;
+}
+
+.tweet_input_container > .tweet_footer > .factory_input_tweet{
+  position: absolute;
+  right: 0;
+  background-color:#04AAFF;
+  border:none;
+  border-radius: 22px;
+  font-size:15px;
+  color:white;
+  padding:0 10px;
+  height:32px;
+  cursor:pointer;
+}
+
+/* recommend(right side) css */
+
+.right_container{
+  width:20%;
+  height:100vh;
+  margin-top:40px;
+}
+
+.tweet{
+  border-bottom:0.1px solid gray;
+  padding:10px;
+  padding-bottom:15px;
+  display:flex;
+  cursor:pointer;
+}
+
+.tweet:hover{
+  background-color:rgb(28, 29, 29);
+}
+
+.tweet > .tweet_user_photo_container{
+  padding-top: 20px;
+}
+
+.tweet > .tweet_user_photo_container > img{
+  width:50px;
+  height:50px;
+  border-radius: 25px;
+}
+
+.tweet_content {
+  width:100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.tweet > .tweet_content > .tweet_userInfo_container {
+  margin-left:15px;
+  position: relative;
+}
+
+.tweet > .tweet_content > .tweet_userInfo_container > .user_name{
+  font-weight: bold;
+}
+
+.tweet > .tweet_content > .tweet_userInfo_container > .enroll_date{
+  font-weight: lighter;
+  color:slategray;
+  margin-left:10px;
+}
+
+.tweet > .tweet_content > .tweet_userInfo_container > svg{
+  position: absolute;
+  right: 0;
+  padding:5px;
+}
+
+.tweet > .tweet_content > .tweet_userInfo_container > svg:hover{
+  background-color:black;
+  border-radius: 100px;
+
+}
+.close_tweet{
+  position: relative;
+  width: 100%;
+  height:30px;
+}
+
+.close_tweet svg{
+  position:absolute;
+  right:0;
+  padding:5px;
+
+}
+
+.close_tweet svg:hover{
+  background-color: black;
+  border-radius: 100px;
+}
+
+.user_tweet_content{
+  margin-left:15px;
+  margin-top:30px;
+  margin-bottom:20px;
+}
+
+.user_tweet_content > span{
+  font-weight:initial;
+}
+
+.user_tweet_image_container{
+  padding: 0px 5px 5px 15px;
+}
+
+.user_tweet_image_container > img{
+  width:100%;
+  height:auto;
+  border-radius: 10px;
+}
+
+.tweet > .tweet_content > .action_container{
+  display: flex;
+  justify-content: space-around;
+}
+
+.tweet > .tweet_content > .action_container div{
+  display:flex;
+  align-items:center;
+}
+
+.tweet > .tweet_content > .action_container svg{
+  padding:8px;
+  border-radius: 20px;
+}
+
+.tweet > .tweet_content > .action_container span{
+  margin-left:5px;
+  user-select:none;
+}
+
+/* .tweet > .tweet_content > .action_container svg:hover{
+  background-color:black;
+} */
+
+.action_container > .action_comment_container > svg:hover{
+  background-color:skyblue;
+}
+
+.action_container > .action_retweet_container > svg:hover{
+  background-color:rgb(40, 155, 40);
+}
+
+.action_container > .action_like_container > svg:hover{
+  background-color:rgb(170, 83, 83);
+}
+
+.action_container > .action_share_container > svg:hover{
+  background-color:skyblue;
+}
+
+.action_like_container > .hearted{
+  color:red;
+}
+
