--- a/src/style.css
+++ b/src/style.css
@@ -437,7 +437,7 @@ img{
 /* recommend(right side) css */
 
 .recommend_container{
-  width:20%;
+  width:22%;
   margin-top:40px;
   padding:20px;
   height:100vh;
@@ -445,13 +445,16 @@ img{
 
 .recommend_container_content{
   background-color:rgb(30, 32, 36);
-  height:calc(100% - 80px);
+  /* height:calc(100% - 80px); */
   border-radius: 16px;
+  position:fixed;
+  width:22%;
 }
 
 .recommend_header_container{
   padding-top: 15px;
   padding-left: 15px;
+  position: relative;
 }
 
 .recommend_header_container > h3{
@@ -483,6 +486,29 @@ img{
   border-radius: 25px;
 }
 
-.recommend_item > .user_display_name{
+.recommend_contaienr_follow_box{
+  margin-left:auto;
 }
 
+.recommend_contaienr_follow_box > button{
+  font-weight:bold;
+  background-color:white;
+  border-radius: 30px;
+  padding:5px 15px;
+  border:none;
+  cursor:pointer;
+}
+
+.recommend_friend_follow_btn{
+  color:black;
+  font-weight:bold;
+}
+
+.recommend_friend_follow_btn:hover{
+  color:red;
+}
+
+.recommend_friend_unfollow_btn{
+  color:blue;
+  font-weight: bold;
+}
