feat : topNavi에서 현재 페이지 알려주기
topNavi가 Home으로 고정되어 있었는데 Home일때는 Home, Profile일때는
Profile과 <- 를 넣어서 눌렀을때 Home으로 이동하는 기능 추가

--- a/src/style.css
+++ b/src/style.css
@@ -37,10 +37,15 @@ img{
   align-items:center;
 }
 
+.show_current_page > svg { 
+  margin-left:20px;
+  cursor: pointer;
+}
+
 .show_current_page > span{
   font-weight:bold;
   font-size:20px;
-  margin-left:10px;
+  margin-left:20px;
 }
 
 .top_side_container{
@@ -781,4 +786,17 @@ img{
 
 .like_container > .like_container_content > .text{
   margin-top:20px;
+}
+
+/* update profile modal */
+
+.modal_update_profile_container{
+  position: absolute;
+  background-color: slategray;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width:500px;
+  height:500px;
 }
