--- a/src/style.css
+++ b/src/style.css
@@ -483,7 +483,7 @@ img{
 }
 
 .recommend_list > .recommend_item:hover{
-  background-color:white;
+  background-color:rgb(67, 64, 64);
 }
 
 .recommend_item > .user_image_container > img{
@@ -530,7 +530,7 @@ img{
 
 .container > .my_profile_container{
   position: relative;
-  height:8%;
+  height:80px;
 }
 
 .container > .my_profile_container > .my_profile_container_top{
@@ -605,6 +605,7 @@ img{
 
 .container > .my_trace_navi {
   display: flex;
+  height:100px;
   border-bottom:0.1px solid lightslategray;
 }
 
@@ -992,3 +993,115 @@ img{
 }
 
 
+/* tweet_modal */
+
+.tweet_modal_background{
+  position: absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background-color:rgba(255,255,255,0.5); 
+  z-index:2;
+}
+
+.tweet_modal_background > .tweet_modal_container{
+  background-color:black;
+  width:600px;
+  height:350px;
+  z-index: 3;
+  border-radius: 15px;
+  margin: 0 auto;
+  margin-top:40px;
+}
+
+.tweet_modal_container > .delete_container{
+  display:flex;
+  width:100%;
+  margin-bottom:30px;
+}
+
+.tweet_modal_container > .delete_container > svg{
+  position: absolute;
+  font-size:15px;
+  cursor:pointer;
+  border-radius: 30px;
+  padding:10px;
+  margin-top:10px;
+  margin-left:10px;
+}
+
+.tweet_modal_container > .delete_container > svg:hover{
+  background-color:rgb(67, 64, 64);
+}
+
+.tweet_modal_content_container{
+  display:flex;
+  margin-top:70px;
+
+}
+
+
+.tweet_modal_content_container > .user_img_container{
+  height:100%;
+  margin-left:30px;
+}
+
+.tweet_modal_content_container > .user_img_container > img {
+  width:60px;
+  height:60px;
+  border-radius: 30px;
+}
+
+.tweet_modal_content_container > .user_tweet_container{
+  height:100%;
+  width:100%;
+  margin-left:20px;
+  margin-top:20px;
+}
+
+.tweet_modal_content_container > .user_tweet_container > div{
+  margin-top:40px;
+}
+
+.tweet_modal_tweet_text{
+  width:80%;
+  border:none;
+  outline:none;
+  border-bottom:1px solid white;
+  background-color: transparent;
+  height:60px;
+  color:white;
+  font-size:20px;
+}
+
+
+.tweet_modal_container_footer{
+  margin: 0 auto;
+  margin-top:12%;
+  width:70%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.tweet_modal_container_footer > svg {
+  width:30px;
+  height:30px;
+  color:#04AAFF;
+  margin-top:30px;
+  margin-left:10px;
+  cursor: pointer;
+}
+
+.tweet_modal_container_footer > button{
+  background-color:#04AAFF;
+  padding:10px 20px;
+  border-radius: 20px;
+  color:white;  
+  font-weight: bold;
+  float:right;
+  margin-right:10px;
+  cursor:pointer;
+  margin-top:20px;
+}
