--- a/src/style.css
+++ b/src/style.css
@@ -571,6 +571,10 @@ img{
   background-color:rgb(67, 64, 64);
 }
 
+.recommend_list > .recommend_item > .user_display_name{
+  font-size:13px;
+}
+
 .recommend_item > .user_image_container > img{
   width:50px;
   height:50px;
@@ -1318,8 +1322,8 @@ img{
   display:flex;
   flex-direction: column;
   margin-top:30px;
-  margin-left:60px;
-  margin-right:60px;
+  margin-left:100px;
+  margin-right:80px;
   border:1px solid white;
   border-radius: 30px;
 }
@@ -1365,4 +1369,10 @@ img{
 .retweet_content_container > .retweet_img > img{
   width:auto;
   height:auto;
+}
+
+.tictoc_retweet_content_container > .retweet_content_container{
+  margin-right:0;
+  margin-left:0;
+  margin-bottom:20px;
 }
