feat : tweet을 누르면 details.js로 가고 밑에 replying한 사람들과 내용이 뜸
각 tweet을 누르면 상세보기(details.js)로 가고 그 트윗에 replying한
내용들이 쫙 뜸.
replying도 가능함.

--- a/src/style.css
+++ b/src/style.css
@@ -1428,7 +1428,7 @@ img{
 .detail_tweet_write_container_active{
   display:flex;
   padding:5px 10px;
-  border:0.1px solid slategray;
+  border-bottom:0.1px solid slategray;
 }
 
 .detail_tweet_write_container_active > .tweet_write_active_img_container > img{
