--- a/src/style.css
+++ b/src/style.css
@@ -1504,7 +1504,6 @@ img{
   justify-content: center;
   align-items: center;
   width:50%;
-  border-right:0.1px solid white;
 }
 
 .init_page_login_form_container{
@@ -1534,26 +1533,171 @@ img{
   padding: 10px 20px;
   background-color:#04AAFF;
   border-radius: 20px;
+  cursor: pointer;
 }
 
 .authBtns{
   margin-left:30px;
   display:flex;
   flex-direction: column;
-  margin-bottom:40px;
 }
 
 .authSwitch{
   margin-top:10px;
-  background-color: #04AAFF;
-  padding:10px 20px;
   text-align: center;
-  border-radius: 30px;
+  background: transparent;
   cursor:pointer;
-  font-size:12px;
-  font-weight:bold;
+  font-size:14px;
+  color:#04AAFF;
+  border:none;
+  width:auto;
+  margin:5px;
+  padding:0;
+  border-bottom:1px solid black;
+}
+
+.authSwitch:hover{
+  border-bottom:1px solid white;
 }
 
 .login_form{
   text-align:center;
+}
+
+.authBtn:before{
+  display:inline-block;
+  width:auto;
+}
+
+.authBtn:after{
+  content:"";
+}
+
+.authBtn{
+  padding:7px;
+  font-size:14px;
+  display: flex;
+}
+
+.googleAuth{
+  background-color: #DD4B39;
+  border: 1px solid #c23321;
+  color:white;
+}
+
+.githubAuth{
+  background-color:#333;
+  border:1px solid #1a1a1a;
+  color:white;
+  margin-top:10px;
+}
+
+.githubAuth:hover{
+  background-color: #262626;
+}
+
+.googleAuth:hover{
+  background-color: #d73925;
+}
+
+.githubAuth > svg{
+  border-right: 1px solid #1a1a1a;
+}
+
+.googleAuth > svg{
+  border-right: 1px solid #c23321;
+}
+
+.authBtn > svg{
+  color:white;
+  padding: 10px;
+}
+
+.githubAuth > span{
+  padding:10px;
+}
+
+.authBtn > span{
+  display:flex;
+  align-items: center;
+  padding:10px;
+}
+
+.githubAuth > svg:after{
+  border-right:1px solid #4d4d4d;
+}
+
+.create_modal_background{
+  position: fixed;
+  left:50%;
+  top: 50%;
+  width:100%;
+  height:100%;
+  transform: translate(-50%, -50%);
+  background-color:rgba(255,255,255, 0.5);
+}
+
+.create_modal_container{
+  position: absolute;
+  left:50%;
+  top: 50%;
+  width:100%;
+  height:100%;
+  transform: translate(-50%, -50%);
+  width:500px;
+  height:500px;
+  background-color:black;
+}
+
+.create_modal_container > .twitter_icon_container > svg{
+  color:#04AAFF;
+  margin:60px 0px;
+  font-size:50px;
+}
+
+.create_account_form{
+  display:flex;
+  flex-direction: column;
+  width: 60%;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.create_account_form > .create_authInput {
+  height:40px;
+  width:100%;
+  margin-bottom: 20px;
+  background: transparent;
+  border:none;
+  border-bottom: 1px solid white;
+  color:white;
+  outline: none;
+  font-size:18px;
+}
+
+.create_account_form > .create_account_btn{
+  background: #04AAFF;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 20px;
+  border: none;
+  font-weight: bold;
+  margin-top:30px;
+  cursor: pointer;
+}
+
+.create_account_modal_close > svg{
+  position: absolute;
+  padding:5px;
+  right:0;
+  cursor:pointer;
+  margin-top:8px;
+  margin-right:8px;
+  width:20px;
+  height:20px;
+}
+
+.create_account_modal_close > svg:hover{
+  border-radius: 20px;
+  background-color: rgb(38, 36, 36);
 }
