fix : 리트윗한 상태에서 refresh하면 생기는 버그
리트윗 버튼을 누르고 리트윗을 클릭하면 리트윗 상태가 된다.
리트윗 상태에서 refresh를 하면 UI적으로 내가 리트윗했는지 안보인다.
그래서 reply_users라는 key를 만들어서 리트윗 버튼을 누를 경우 배열에다가
넣게 함.

사용자가 트윗에 리트윗을 할 경우 UI에 초록색을 주어 리트윗 상태를
사용자가 알게 한다.

--- a/src/style.css
+++ b/src/style.css
@@ -518,10 +518,6 @@ img{
   background-color:rgb(40, 155, 40);
 }
 
-.action_container > .action_retweet_container > .retweet_hover{
-  background-color:rgb(40, 155, 40);
-}
-
 .action_container > .action_like_container > svg:hover{
   background-color:rgb(170, 83, 83);
 }
@@ -1718,6 +1714,14 @@ img{
 .create_account_modal_close > svg:hover{
   border-radius: 20px;
   background-color: rgb(38, 36, 36);
+}
+
+.retweet_state{
+  color:rgba(40, 155, 40, 0.6);
+}
+
+.retweet_state_num{
+  color:rgb(40, 155, 40);
 }
 
 
