fix : 리트윗 호버시 색상 문제
리트윗한 상태이고 hover상태일 때 background와 icon의 색상이 같아서 UI가
불편한걸 고침

--- a/src/style.css
+++ b/src/style.css
@@ -1133,6 +1133,8 @@ img{
   padding:10px;
   margin-top:10px;
   margin-left:10px;
+  width:15px;
+  height:15px;
 }
 
 .tweet_modal_container > .delete_container > svg:hover{
