fix : details.js에서 hover나 click시 버그 발생 수정
details.js에서 tweet을 hover했을 때 tweet의 색상이 변하는 것 수정.
tweet을 click했을 때 오류가 발생하는 것 수정.

--- a/src/style.css
+++ b/src/style.css
@@ -178,6 +178,7 @@ img{
   margin-left:auto;
 }
 
+
 .current_user_info{
   display:flex;
   align-items:center;
@@ -340,11 +341,18 @@ img{
   padding:10px;
   padding-bottom:15px;
   display:flex;
-  cursor:pointer;
 }
 
-.tweet:hover{
+.tweet_home{
+  cursor: pointer;
+}
+
+.tweet_home:hover{
   background-color:rgb(28, 29, 29);
+}
+
+.tweet svg{
+  cursor: pointer;
 }
 
 .tweet > .tweet_user_photo_container{
