--- a/src/style.css
+++ b/src/style.css
@@ -1813,3 +1813,49 @@ img{
 }
 
 
+/* deleteModal */
+
+.delete_modal_background_container{
+  position: fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background-color:rgba(255,255,255,0.5); 
+  z-index:6;
+}
+
+.delete_modal_container {
+  position: relative;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+  width: 280px;
+  height: auto;
+  background-color:black;
+  padding:40px;
+  border-radius: 20px;
+}
+
+.delete_modal_container > .delete_text_content > span{
+  font-size:14px;
+}
+
+.delete_button_container {
+  margin-top:30px;
+  display:flex;
+  flex-direction: column;
+}
+
+.delete_button_container > button{
+  height:40px;
+  border-radius:20px;
+  cursor:pointer;
+  font-weight:bold;
+}
+
+.delete_button_container > .delete{
+  margin-bottom:5px;
+  background-color:red;
+  color:white;
+}
